--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,7 @@ dependencies {
     // Android KTX
     implementation "androidx.fragment:fragment-ktx:1.2.5"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+
+    // Timber
+    implementation 'com.jakewharton.timber:timber:4.7.1'
 }
