Added the face detection sdk to the project.

--- a/TungTung/app/build.gradle
+++ b/TungTung/app/build.gradle
@@ -75,4 +75,7 @@ dependencies {
 
     // Timber
     implementation 'com.jakewharton.timber:timber:4.7.1'
+
+    // Google Vision
+    implementation 'com.google.mlkit:face-detection:16.0.2'
 }
