--- a/TungTung/app/build.gradle
+++ b/TungTung/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0-alpha03'
 
     // CameraX
+    implementation "androidx.camera:camera-core:$camera_x_version"
     implementation "androidx.camera:camera-camera2:$camera_x_version"
     implementation "androidx.camera:camera-lifecycle:$camera_x_version"
     implementation "androidx.camera:camera-view:1.0.0-alpha17"
